--- a/windows/Installer/src/ui/UST_VerifyReadyDlg.wxs
+++ b/windows/Installer/src/ui/UST_VerifyReadyDlg.wxs
@@ -26,76 +26,6 @@
           <Publish Event="EnableRollback" Value="False">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
           <Publish Event="SpawnDialog" Value="OutOfDiskDlg">(OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 1) OR (OutOfDiskSpace = 1 AND PROMPTROLLBACKCOST="F")</Publish>
         </Control>
-        <Control Id="Change" Type="PushButton" ElevationShield="yes" X="212" Y="243" Width="80" Height="17" Default="yes" Hidden="yes" Disabled="yes" Text="!(loc.VerifyReadyDlgChange)">
-          <Condition Action="show">WixUI_InstallMode = "Change" AND ALLUSERS AND (ADDLOCAL OR REMOVE)</Condition>
-          <Condition Action="enable">WixUI_InstallMode = "Change"</Condition>
-          <Condition Action="default">WixUI_InstallMode = "Change"</Condition>
-          <Publish Event="EndDialog" Value="Return"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
-          <Publish Event="SpawnDialog" Value="OutOfRbDiskDlg">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND (PROMPTROLLBACKCOST="P" OR NOT PROMPTROLLBACKCOST)</Publish>
-          <Publish Event="EndDialog" Value="Return">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
-          <Publish Event="EnableRollback" Value="False">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
-          <Publish Event="SpawnDialog" Value="OutOfDiskDlg">(OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 1) OR (OutOfDiskSpace = 1 AND PROMPTROLLBACKCOST="F")</Publish>
-        </Control>
-        <Control Id="ChangeNoShield" Type="PushButton" ElevationShield="no" X="212" Y="243" Width="80" Height="17" Default="yes" Hidden="yes" Disabled="yes" Text="!(loc.VerifyReadyDlgChange)">
-          <Condition Action="show">WixUI_InstallMode = "Change" AND (NOT ALLUSERS OR (NOT ADDLOCAL AND NOT REMOVE))</Condition>
-          <Condition Action="enable">WixUI_InstallMode = "Change"</Condition>
-          <Condition Action="default">WixUI_InstallMode = "Change"</Condition>
-          <Publish Event="EndDialog" Value="Return"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
-          <Publish Event="SpawnDialog" Value="OutOfRbDiskDlg">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND (PROMPTROLLBACKCOST="P" OR NOT PROMPTROLLBACKCOST)</Publish>
-          <Publish Event="EndDialog" Value="Return">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
-          <Publish Event="EnableRollback" Value="False">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
-          <Publish Event="SpawnDialog" Value="OutOfDiskDlg">(OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 1) OR (OutOfDiskSpace = 1 AND PROMPTROLLBACKCOST="F")</Publish>
-        </Control>
-        <Control Id="Repair" Type="PushButton" X="212" Y="243" Width="80" Height="17" Default="yes" Hidden="yes" Disabled="yes" Text="!(loc.VerifyReadyDlgRepair)">
-          <Condition Action="show">WixUI_InstallMode = "Repair"</Condition>
-          <Condition Action="enable">WixUI_InstallMode = "Repair"</Condition>
-          <Condition Action="default">WixUI_InstallMode = "Repair"</Condition>
-          <Publish Event="ReinstallMode" Value="ecmus"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
-          <Publish Event="Reinstall" Value="All"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
-          <Publish Event="EndDialog" Value="Return"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
-          <Publish Event="SpawnDialog" Value="OutOfRbDiskDlg">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND (PROMPTROLLBACKCOST="P" OR NOT PROMPTROLLBACKCOST)</Publish>
-          <Publish Event="EndDialog" Value="Return">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
-          <Publish Event="EnableRollback" Value="False">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
-          <Publish Event="SpawnDialog" Value="OutOfDiskDlg">(OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 1) OR (OutOfDiskSpace = 1 AND PROMPTROLLBACKCOST="F")</Publish>
-        </Control>
-        <Control Id="Remove" Type="PushButton" ElevationShield="yes" X="212" Y="243" Width="80" Height="17" Hidden="yes" Disabled="yes" Text="!(loc.VerifyReadyDlgRemove)">
-          <Condition Action="show">WixUI_InstallMode = "Remove" AND ALLUSERS</Condition>
-          <Condition Action="enable">WixUI_InstallMode = "Remove"</Condition>
-          <Publish Event="Remove" Value="All"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
-          <Publish Event="EndDialog" Value="Return"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
-          <Publish Event="SpawnDialog" Value="OutOfRbDiskDlg">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND (PROMPTROLLBACKCOST="P" OR NOT PROMPTROLLBACKCOST)</Publish>
-          <Publish Event="EndDialog" Value="Return">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
-          <Publish Event="EnableRollback" Value="False">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
-          <Publish Event="SpawnDialog" Value="OutOfDiskDlg">(OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 1) OR (OutOfDiskSpace = 1 AND PROMPTROLLBACKCOST="F")</Publish>
-        </Control>
-        <Control Id="RemoveNoShield" Type="PushButton" ElevationShield="no" X="212" Y="243" Width="80" Height="17" Hidden="yes" Disabled="yes" Text="!(loc.VerifyReadyDlgRemove)">
-          <Condition Action="show">WixUI_InstallMode = "Remove" AND NOT ALLUSERS</Condition>
-          <Condition Action="enable">WixUI_InstallMode = "Remove"</Condition>
-          <Publish Event="Remove" Value="All"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
-          <Publish Event="EndDialog" Value="Return"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
-          <Publish Event="SpawnDialog" Value="OutOfRbDiskDlg">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND (PROMPTROLLBACKCOST="P" OR NOT PROMPTROLLBACKCOST)</Publish>
-          <Publish Event="EndDialog" Value="Return">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
-          <Publish Event="EnableRollback" Value="False">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
-          <Publish Event="SpawnDialog" Value="OutOfDiskDlg">(OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 1) OR (OutOfDiskSpace = 1 AND PROMPTROLLBACKCOST="F")</Publish>
-        </Control>
-        <Control Id="Update" Type="PushButton" ElevationShield="yes" X="212" Y="243" Width="80" Height="17" Hidden="yes" Disabled="yes" Text="!(loc.VerifyReadyDlgUpdate)">
-          <Condition Action="show">WixUI_InstallMode = "Update" AND ALLUSERS</Condition>
-          <Condition Action="enable">WixUI_InstallMode = "Update"</Condition>
-          <Publish Event="EndDialog" Value="Return"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
-          <Publish Event="SpawnDialog" Value="OutOfRbDiskDlg">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND (PROMPTROLLBACKCOST="P" OR NOT PROMPTROLLBACKCOST)</Publish>
-          <Publish Event="EndDialog" Value="Return">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
-          <Publish Event="EnableRollback" Value="False">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
-          <Publish Event="SpawnDialog" Value="OutOfDiskDlg">(OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 1) OR (OutOfDiskSpace = 1 AND PROMPTROLLBACKCOST="F")</Publish>
-        </Control>
-        <Control Id="UpdateNoShield" Type="PushButton" ElevationShield="no" X="212" Y="243" Width="80" Height="17" Hidden="yes" Disabled="yes" Text="!(loc.VerifyReadyDlgUpdate)">
-          <Condition Action="show">WixUI_InstallMode = "Update" AND NOT ALLUSERS</Condition>
-          <Condition Action="enable">WixUI_InstallMode = "Update"</Condition>
-          <Publish Event="EndDialog" Value="Return"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
-          <Publish Event="SpawnDialog" Value="OutOfRbDiskDlg">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND (PROMPTROLLBACKCOST="P" OR NOT PROMPTROLLBACKCOST)</Publish>
-          <Publish Event="EndDialog" Value="Return">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
-          <Publish Event="EnableRollback" Value="False">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
-          <Publish Event="SpawnDialog" Value="OutOfDiskDlg">(OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 1) OR (OutOfDiskSpace = 1 AND PROMPTROLLBACKCOST="F")</Publish>
-        </Control>
 
         <Control Id="InstallTitle" Type="Text" X="15" Y="15" Width="300" Height="15" Transparent="yes" NoPrefix="yes" Hidden="yes" Text="!(loc.VerifyReadyDlgInstallTitle)">
           <Condition Action="show">NOT Installed</Condition>
@@ -135,32 +65,17 @@
           <Condition Action="default">WixUI_InstallMode = "Remove"</Condition>
         </Control>
 
-
         <Control Id="InstallDescHeader" Type="Text" X="25" Y="105" Width="320" Height="30" NoPrefix="yes" Text="{\WixUI_Font_Title}Settings:"/>
         <Control Id="Line1" Type="Text" X="25" Y="124" Width="320" Height="20" NoPrefix="yes" Text="UST Version: [USTVERSION]"/>
 
-        <Control Id="Line2" Type="Text" X="25" Y="136" Width="320" Height="20" NoPrefix="yes" Hidden="yes"  Text="Python Version: 2.7">
-          <Condition Action="show">USEPYTHON2</Condition>
+        <Control Id="Line6" Type="Text" X="25" Y="136" Width="320" Height="20" NoPrefix="yes" Hidden="yes"  Text="Create SSL cert: no">
+          <Condition Action="show">SKIPCERTGEN</Condition>
         </Control>
-        <Control Id="Line3" Type="Text" X="25" Y="136" Width="320" Height="20" NoPrefix="yes" Hidden="yes"  Text="Python Version: 3.6">
-          <Condition Action="show">NOT USEPYTHON2</Condition>
-        </Control>
+        <Control Id="Line7" Type="Text" X="25" Y="136" Width="320" Height="20" NoPrefix="yes" Hidden="yes"  Text="Create SSL cert: yes">
+          <Condition Action="show">NOT SKIPCERTGEN</Condition>
+        </Control>        
 
-        <Control Id="Line4" Type="Text" X="25" Y="148" Width="320" Height="20" NoPrefix="yes" Hidden="yes"  Text="Install Python: yes">
-          <Condition Action="show">NOT CERTONLY AND INSTALLPYTHON</Condition>
-        </Control>
-        <Control Id="Line5" Type="Text" X="25" Y="148" Width="320" Height="20" NoPrefix="yes" Hidden="yes"  Text="Install Python: no">
-          <Condition Action="show">CERTONLY OR NOT INSTALLPYTHON</Condition>
-        </Control>
-
-        <!--<Control Id="Line6" Type="Text" X="25" Y="160" Width="320" Height="20" NoPrefix="yes" Hidden="yes"  Text="Certificate / key only: yes">
-          <Condition Action="show">CERTONLY</Condition>
-        </Control>
-        <Control Id="Line7" Type="Text" X="25" Y="160" Width="320" Height="20" NoPrefix="yes" Hidden="yes"  Text="Certificate / key only: no">
-          <Condition Action="show">NOT CERTONLY</Condition>
-        </Control>-->
-
-        <Control Id="Line8" Type="Text" X="25" Y="160" Width="320" Height="20" NoPrefix="yes" Text="Install Directory: [INSTALLDIR]"/>
+        <Control Id="Line8" Type="Text" X="25" Y="148" Width="320" Height="20" NoPrefix="yes" Text="Install Directory: [INSTALLDIR]"/>
         <Control Id="FooterText" Type="Text" X="18" Y="230" Width="100" Height="18" Disabled="yes" NoPrefix="yes" Text="[FOOTER]" />
         <Control Id="BannerBitmap" Type="Bitmap" X="0" Y="0" Width="370" Height="44" TabSkip="no" Text="!(loc.VerifyReadyDlgBannerBitmap)" />
         <Control Id="BannerLine" Type="Line" X="0" Y="44" Width="370" Height="0" />
